# dmstringtest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: dmstringtest.h  dmstringtest_config.h  dmstringtest_config.h.in
src/libdmstringtest/: libdmstringtest.def  libdmstringtest_impl.cpp  libdmstringtest_impl.h
test/dmstringtesttest/: dmstringtesttest.cpp
